test/Fail/TermSplicing1.err
TermSplicing1.agda:6.19-22: error: [UnequalTypes]
The type
  Set₁
is not a subtype of
  Term
when checking that the expression Set has type Term
